--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
   "homepage": "https://github.com/XsAndre-L/Storefront-Backend---Express#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jasmine": "^4.0.3",
+    "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
+    "db-migrate": "^0.11.13",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.16",
@@ -34,6 +37,9 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jasmine": "^4.2.0",
+    "pg": "^8.7.3"
   }
 }
