db-migrate setup

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-POSTGRES_HOST = 127.0.0.1
-POSTGRES_DB = store_db
-POSTGRES_DB_TEST = store_db_test
-POSTGRES_USER = postgres
-POSTGRES_PASSWORD = root
+POSTGRES_HOST=127.0.0.1
+POSTGRES_PORT=54320
+POSTGRES_DB=storefront_db
+POSTGRES_DB_TEST=storefront_db_test
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
 
 ENV = dev
