--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   postgres:
     image: postgres
     ports:
-      - '5432:5432'
+      - '54320:5432'
     env_file:
       - .env
     volumes:
       - 'postgres:/var/lib/postgresql/data'
 
 volumes:
-  postgres:
+  postgres: {}
