--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
   },
   "homepage": "https://github.com/XsAndre-L/Storefront-Backend---Express#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.16",
@@ -38,9 +42,10 @@
     "typescript": "^4.7.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "jasmine": "^4.2.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   }
 }
