Order model , order info model, user model - updates

--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@ POSTGRES_DB_TEST=storefront_db_test
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 
-ENV = dev
+ENV=dev
+
+BCRYPT_PASSWORD=extra_string
+HASH_ROUNDS=10
