--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "set ENV=test && db-migrate up --env=test && npm run build && jasmine && db-migrate down --env=test",
     "build": "npx tsc",
     "start": "nodemon ./src/server.ts",
     "prettier": "prettier --config .prettierrc src/**/*.ts --write",
@@ -27,8 +27,9 @@
     "@types/express": "^4.17.13",
     "@types/jasmine": "^4.0.3",
     "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^18.0.0",
+    "@types/node": "^17.0.40",
     "@types/pg": "^8.6.5",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "db-migrate": "^0.11.13",
@@ -36,6 +37,7 @@
     "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.0",
     "ts-node": "^10.8.1",
@@ -46,6 +48,7 @@
     "express": "^4.18.1",
     "jasmine": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "supertest": "^6.2.3"
   }
 }
