--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "set ENV=test && db-migrate up --env=test && npm run build && jasmine && db-migrate down --env=test",
+    "test": "set ENV=test && db-migrate up --env=test && npm run build && jasmine && db-migrate down -c 100 --env=test ",
     "build": "npx tsc",
     "start": "nodemon ./src/server.ts",
     "prettier": "prettier --config .prettierrc src/**/*.ts --write",
