--- a/package.json
+++ b/package.json
@@ -1,56 +1,59 @@
 {
-  "name": "storefront-backend---express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "set ENV=test && db-migrate up --env=test && npm run build && jasmine && db-migrate down -c 100 --env=test ",
-    "build": "npx tsc",
-    "start": "nodemon ./src/server.ts",
-    "prettier": "prettier --config .prettierrc src/**/*.ts --write",
-    "lint": "eslint . --ext .ts",
-    "check": "npm run lint && npm run prettier"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/XsAndre-L/Storefront-Backend---Express.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/XsAndre-L/Storefront-Backend---Express/issues"
-  },
-  "homepage": "https://github.com/XsAndre-L/Storefront-Backend---Express#readme",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jasmine": "^4.0.3",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/node": "^17.0.40",
-    "@types/pg": "^8.6.5",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.28.0",
-    "@typescript-eslint/parser": "^5.28.0",
-    "db-migrate": "^0.11.13",
-    "db-migrate-pg": "^1.2.2",
-    "dotenv": "^16.0.1",
-    "eslint": "^8.17.0",
-    "eslint-config-prettier": "^8.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.7.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "jasmine": "^4.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.7.3",
-    "supertest": "^6.2.3"
-  }
+    "name": "storefront-backend---express",
+    "version": "1.0.0",
+    "description": "",
+    "engines": {
+        "node": "16.15.1"
+    },
+    "main": "index.js",
+    "scripts": {
+        "test": "set ENV=test && db-migrate up --env=test && npm run build && jasmine && db-migrate down -c 100 --env=test ",
+        "build": "npx tsc",
+        "start": "npx nodemon ./src/server.ts",
+        "prettier": "prettier --config .prettierrc src/**/*.ts --write",
+        "lint": "eslint . --ext .ts",
+        "check": "npm run lint && npm run prettier"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/XsAndre-L/Storefront-Backend---Express.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/XsAndre-L/Storefront-Backend---Express/issues"
+    },
+    "homepage": "https://github.com/XsAndre-L/Storefront-Backend---Express#readme",
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.13",
+        "@types/jasmine": "^4.0.3",
+        "@types/jsonwebtoken": "^8.5.8",
+        "@types/node": "^17.0.40",
+        "@types/pg": "^8.6.5",
+        "@types/supertest": "^2.0.12",
+        "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/parser": "^5.28.0",
+        "db-migrate": "^0.11.13",
+        "db-migrate-pg": "^1.2.2",
+        "dotenv": "^16.0.1",
+        "eslint": "^8.17.0",
+        "eslint-config-prettier": "^8.5.0",
+        "jasmine-spec-reporter": "^7.0.0",
+        "nodemon": "^2.0.16",
+        "prettier": "^2.7.0",
+        "ts-node": "^10.8.1",
+        "typescript": "^4.7.3"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "cors": "^2.8.5",
+        "express": "^4.18.1",
+        "jasmine": "^4.2.0",
+        "jsonwebtoken": "^8.5.1",
+        "pg": "^8.7.3",
+        "supertest": "^6.2.3"
+    }
 }
