--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "start": "npx nodemon ./src/server.ts",
         "prettier": "prettier --config .prettierrc src/**/*.ts --write",
         "lint": "eslint . --ext .ts",
-        "check": "npm run lint && npm run prettier"
+        "check": "npm run lint && npm run prettier",
+        "gitDone": "git add --all && git commit -m 'auto' && git push"
     },
     "repository": {
         "type": "git",
